--- a/ClashX/Support Files/zh-Hans.lproj/Localizable.strings
+++ b/ClashX/Support Files/zh-Hans.lproj/Localizable.strings
@@ -5,9 +5,6 @@
 "Add a remote control config" = "添加远程控制器配置";
 
 /* No comment provided by engineer. */
-"Apply and Quit" = "应用并退出";
-
-/* No comment provided by engineer. */
 "Auto Close Connection" = "切换代理时中断连接";
 
 /* No comment provided by engineer. */
@@ -82,11 +79,6 @@
 /* No comment provided by engineer. */
 "Load Balance" = "负载均衡";
 
-"Mode" = "模式";
-
-/* No comment provided by engineer. */
-"Need to Restart the ClashX to Take effect, Please start clashX manually" = "需要重启ClashX生效，请手动启动ClashX";
-
 /* No comment provided by engineer. */
 "Never" = "从未";
 
@@ -130,13 +122,7 @@
 "Rule" = "规则";
 
 /* No comment provided by engineer. */
-"Script" = "脚本";
-
-/* No comment provided by engineer. */
 "Should be a least 1 hour" = "至少需要1小时间隔";
-
-/* No comment provided by engineer. */
-"Show speedTest at top" = "顶端显示测速按钮";
 
 /* No comment provided by engineer. */
 "Stable" = "Stable";
@@ -185,3 +171,24 @@
 
 /* No comment provided by engineer. */
 "Use reload config to try reconnect." = "使用重载配置文件按钮尝试重新连接";
+
+/* No comment provided by engineer. */
+"Alpha Meta core Warning" = """
+如果你不知道你在做什么, 请绝对不要打开这个开关.
+在sudo 权限下运行未经验证的 Meta 核心, 可能损坏你的mac.
+""";
+
+/* No comment provided by engineer. */
+"Continue" = "继续";
+
+/* No comment provided by engineer. */
+"Download Meta core" = "下载Meta 内核";
+
+/* No comment provided by engineer. */
+"Start Meta Fail!" = "打开Meta 失败!";
+
+/* No comment provided by engineer. */
+"Update Meta core" = "更新Meta 内核";
+
+/* No comment provided by engineer. */
+"Version: " = "版本: ";
