--- a/ClashX/Support Files/en.lproj/Localizable.strings
+++ b/ClashX/Support Files/en.lproj/Localizable.strings
@@ -1,8 +1,14 @@
+/* Provider update time title */
+" ago" = " ago";
+
 /* No comment provided by engineer. */
 "Add a remote config" = "Add a remote config";
 
 /* No comment provided by engineer. */
 "Add a remote control config" = "Add a remote control config";
+
+/* No comment provided by engineer. */
+"Alpha Meta core Warning" = "If you don't know what you're doing, never turn this switch on.\nRunning Meta Core without any authentication under 'su' privileges may damage your mac.";
 
 /* No comment provided by engineer. */
 "Auto Close Connection" = "Auto Close Connection";
@@ -38,7 +44,13 @@
 "Config loading Fail!" = "Config loading Fail!";
 
 /* No comment provided by engineer. */
+"Continue" = "Continue";
+
+/* No comment provided by engineer. */
 "Custom your GEOIP MMDB download address." = "Custom your GEOIP MMDB download address.";
+
+/* No comment provided by engineer. */
+"Decode current config failed." = "Decode current config failed.";
 
 /* No comment provided by engineer. */
 "Details" = "Details";
@@ -53,6 +65,9 @@
 "Download fail" = "Download fail";
 
 /* No comment provided by engineer. */
+"Download Meta core" = "Download Meta core";
+
+/* No comment provided by engineer. */
 "Enhance proxy list render" = "Enhance proxy list render";
 
 /* No comment provided by engineer. */
@@ -62,7 +77,13 @@
 "Fail:" = "Fail:";
 
 /* No comment provided by engineer. */
+"Flush fake-ip cache" = "Flush fake-ip cache";
+
+/* No comment provided by engineer. */
 "Global" = "Global";
+
+/* No comment provided by engineer. */
+"Good luck to you  🙃" = "Good luck to you  🙃";
 
 /* No comment provided by engineer. */
 "hours" = "hours";
@@ -83,7 +104,16 @@
 "Never" = "Never";
 
 /* No comment provided by engineer. */
+"No new release found." = "No new release found.";
+
+/* No comment provided by engineer. */
+"Not found current config." = "Not found current config.";
+
+/* No comment provided by engineer. */
 "OK" = "OK";
+
+/* No comment provided by engineer. */
+"Open github release page to download " = "Open github release page to download ";
 
 /* No comment provided by engineer. */
 "Ports Open Fail, Please try to restart ClashX" = "Ports Open Fail, Please try to restart ClashX";
@@ -125,7 +155,13 @@
 "Should be a least 1 hour" = "Should be a least 1 hour";
 
 /* No comment provided by engineer. */
+"Some thing failed." = "Some thing failed.";
+
+/* No comment provided by engineer. */
 "Stable" = "Stable";
+
+/* No comment provided by engineer. */
+"Start Meta Fail!" = "Start Meta Fail!";
 
 /* No comment provided by engineer. */
 "Succeed!" = "Succeed!";
@@ -152,6 +188,12 @@
 "This version of ClashX contains a break change due to clash core 1.0 released. Check if your config is not working properly." = "This version of ClashX contains a break change due to clash core 1.0 released. Check if your config is not working properly.";
 
 /* No comment provided by engineer. */
+"Update All Providers" = "Update All Providers";
+
+/* No comment provided by engineer. */
+"Update Alpha Meta core" = "Update Alpha Meta core";
+
+/* No comment provided by engineer. */
 "Update GEOIP Database" = "Update GEOIP Database";
 
 /* No comment provided by engineer. */
@@ -159,6 +201,9 @@
 
 /* No comment provided by engineer. */
 "Updating" = "Updating";
+
+/* No comment provided by engineer. */
+"Updating GEO Databases..." = "Updating GEO Databases...";
 
 /* No comment provided by engineer. */
 "Upgrade Channel" = "Upgrade Channel";
@@ -171,24 +216,6 @@
 
 /* No comment provided by engineer. */
 "Use reload config to try reconnect." = "Use reload config to try reconnect.";
-
-/* No comment provided by engineer. */
-"Alpha Meta core Warning" = """
-If you don't know what you're doing, never turn this switch on.
-Running Meta Core without any authentication under sudo privileges may damage your mac.
-""";
-
-/* No comment provided by engineer. */
-"Continue" = "Continue";
-
-/* No comment provided by engineer. */
-"Download Meta core" = "Download Meta core";
-
-/* No comment provided by engineer. */
-"Start Meta Fail!" = "Start Meta Fail!";
-
-/* No comment provided by engineer. */
-"Update Meta core" = "Update Meta core";
 
 /* No comment provided by engineer. */
 "Version: " = "Version: ";
