feat: migrated to ~/.config/ClashMeta

--- a/ClashX/Support Files/en.lproj/Localizable.strings
+++ b/ClashX/Support Files/en.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "Cancel" = "Cancel";
 
 /* No comment provided by engineer. */
-"ClashX fail to create ~/.config/clash folder. Please check privileges or manually create folder and restart ClashX." = "ClashX fail to create ~/.config/clash folder. Please check privileges or manually create folder and restart ClashX.";
+"ClashX fail to create ~/.config/ClashMeta folder. Please check privileges or manually create folder and restart ClashX." = "ClashX fail to create ~/.config/ClashMeta folder. Please check privileges or manually create folder and restart ClashX.";
 
 /* No comment provided by engineer. */
 "ClashX needs to install/update a helper tool with administrator privileges, otherwise ClashX won't be able to configure system proxy." = "ClashX needs to install/update a helper tool with administrator privileges, otherwise ClashX won't be able to configure system proxy.";
