--- a/ClashX/Support Files/zh-Hans.lproj/Localizable.strings
+++ b/ClashX/Support Files/zh-Hans.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "Cancel" = "取消";
 
 /* No comment provided by engineer. */
-"ClashX fail to create ~/.config/clash folder. Please check privileges or manually create folder and restart ClashX." = "ClashX 创建 ~/.config/clash 文件夹失败，请检查权限设置或者手动创建文件夹后重启 ClashX";
+"ClashX fail to create ~/.config/ClashMeta folder. Please check privileges or manually create folder and restart ClashX." = "ClashX 创建 ~/.config/ClashMeta 文件夹失败，请检查权限设置或者手动创建文件夹后重启 ClashX";
 
 /* No comment provided by engineer. */
 "ClashX needs to install/update a helper tool with administrator privileges, otherwise ClashX won't be able to configure system proxy." = "ClashX 需要使用管理员权限安装/更新一个帮助程序，否则 ClashX 将无法设置系统代理。";
